# shapes-and-columns-cpp

./: CMakeLists.txt  README.md  shapes-and-columns.kdev4
.kdev4/: shapes-and-columns.kdev4
src/: main.cpp
